Added Challenge statement to game How-to's

--- a/game.html
+++ b/game.html
@@ -393,11 +393,11 @@
 
       <div id="introCard">
         <h2>NON-X</h2>
-
+        <p>Can you defeat all 3 Alien Bosses?</p>
         <h3>Controls</h3>
         <ul>
-          <li>← → Arrow keys to move</li>
-          <li>Spacebar to shoot</li>
+          <li>Use mouse or ← → Arrow keys to move</li>
+          <li>Hold left mouse button or Spacebar to shoot</li>
           <li>P or Escape to pause</li>
         </ul>
 
