--- a/game_mobile.html
+++ b/game_mobile.html
@@ -400,6 +400,7 @@
 
     <div id="introCard">
       <h2>NON-X</h2>
+      <p>Can you defeat all 3 Alien Bosses?</p>
 
       <h3>Controls</h3>
       <ul>
