--- a/game_mobile.html
+++ b/game_mobile.html
@@ -60,9 +60,13 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-9ECFZ9JBE5"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() { dataLayer.push(arguments); }
+    function gtag(){window.dataLayer.push(arguments);}
     gtag('js', new Date());
-    gtag('config', 'G-9ECFZ9JBE5');
+    gtag('config', 'G-9ECFZ9JBE5', {
+      'send_page_view': true,
+      'page_title': 'NON-X Mobile Game',
+      'page_location': window.location.href
+    });
   </script>
 
   <meta charset="UTF-8" />
